--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "axios": "^1.7.2",
     "bullmq": "^5.8.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "google-auth-library": "^9.11.0",
+    "googleapis": "^140.0.1",
     "ioredis": "^5.4.1"
   }
 }
